buildscript {
	ext {
		springBootVersion = '2.5.1'
		camelVersion = '2.25.4'
	}
	repositories {
		mavenCentral()
        maven {
            url "https://plugins.gradle.org/m2/"
        }
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	}
}

apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'
apply plugin: 'jacoco'

task copyLombok(type: Copy) {
	outputs.upToDateWhen { false }
	into "${buildDir}/libs"
	include "lombok*.jar"
	from configurations.compileClasspath
}

tasks.withType(JavaCompile) {

    options.fork = true  // Fork your compilation into a child process
    options.forkOptions.setMemoryMaximumSize("256m")
}

test {
    maxHeapSize = "256m"
}

build.dependsOn(copyLombok)

group = 'uk.gov.digital.ho.hocs'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'
targetCompatibility = '11'

repositories {
	mavenCentral()
	jcenter()
}

dependencies {

    implementation('org.springframework.boot:spring-boot-starter-web') {
        exclude(module: 'spring-boot-starter-tomcat')
    }
    implementation('org.springframework.boot:spring-boot-starter-undertow')
    implementation('org.springframework.boot:spring-boot-starter-actuator')
    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
    implementation('org.springframework.boot:spring-boot-starter-json')
    implementation('org.springframework.boot:spring-boot-starter-cache')
    implementation('org.springframework.boot:spring-boot-starter-validation')
    implementation('org.springframework.retry:spring-retry')
    implementation("org.apache.camel:camel-spring-boot-starter:${camelVersion}")
    implementation("org.apache.camel:camel-aws:${camelVersion}")

    implementation('com.github.ben-manes.caffeine:caffeine')
    implementation('com.amazonaws:aws-java-sdk:1.11.470')

    implementation('com.jayway.jsonpath:json-path:2.5.0')

    implementation('org.flywaydb:flyway-core')
    implementation('net.logstash.logback:logstash-logback-encoder:5.3')
    implementation('uk.gov.service.notify:notifications-java-client:3.12.0-RELEASE')

    implementation('io.springfox:springfox-swagger2:2.9.2')
    implementation('io.springfox:springfox-swagger-ui:2.9.2')

    runtimeOnly('org.postgresql:postgresql')
    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.20'
    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.20'

    testImplementation('org.springframework.boot:spring-boot-starter-test')
    testImplementation("org.apache.camel:camel-test-spring:${camelVersion}")
    testImplementation('org.assertj:assertj-core')
    testImplementation group: 'com.google.guava', name: 'guava', version: '28.2-jre'
}

jar {
    enabled = false
}
